# warden

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  fuzz.yml  pages.yml
examples/: agent.warden  deny_overrides.warden  redundant.warden  shadowed.warden  tested.warden
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
playground/: index.html  main.js  style.css
src/: analysis.rs  ast.rs  diagnostics.rs  eval.rs  json.rs  lexer.rs  lib.rs  matcher.rs  parser.rs  selftest.rs  token.rs
tests/: integration.rs  parser_robustness.rs
warden-wasm/: Cargo.toml
warden-wasm/src/: lib.rs
